--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
 flask==2.2.3
+werkzeug==2.2.2
 flask-sqlalchemy==3.0.3
 flask-migrate==4.0.4
 flask-cors==3.0.10
 python-dotenv==1.0.0
-pytest==7.2.2 
+pytest==7.2.2
+psycopg2-binary==2.9.9
+openai==1.12.0
