--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,13 @@
-flask==2.2.3
-werkzeug==2.2.2
-flask-sqlalchemy==3.0.3
-flask-migrate==4.0.4
-flask-cors==3.0.10
+flask==2.3.3
+flask-sqlalchemy==3.1.1
+flask-migrate==4.0.5
+flask-cors==4.0.0
+flask-apscheduler==1.13.1
 python-dotenv==1.0.0
-pytest==7.2.2
 psycopg2-binary==2.9.9
-openai==1.12.0
-openai-whisper==20231117
-python-docx==0.8.11
+werkzeug==2.3.7
+pyjwt==2.8.0
+openai==1.3.7
+numpy==1.26.0
+hnswlib==0.7.0
+gunicorn==21.2.0
