--- a/requirements.txt
+++ b/requirements.txt
@@ -76,7 +76,7 @@ SQLAlchemy==2.0.37
 sympy==1.13.1
 tenacity==9.0.0
 tiktoken==0.9.0
-torch==2.6.0
+# torch==2.6.0
 tqdm==4.67.1
 typing_extensions==4.12.2
 tzdata==2025.1
