--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-
-#I have no idea how much of this is needed vs not
+#env
+.env*
 # Python
 __pycache__/
 *.py[cod]
@@ -34,11 +34,6 @@ instance/
 node_modules/
 /frontend/build
 .DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-.env*
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
@@ -51,3 +46,5 @@ yarn-error.log*
 
 #project roadmap
 z_project_roadmap/
+
+
