--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,8 @@
     "dev": "vite --mode development",
     "build": "vite build",
     "preview": "vite preview",
-    "test": "vitest"
+    "test": "vitest",
+    "start-backend": "flask run --host=0.0.0.0 --port=5000"
   },
   "browserslist": {
     "production": [
