--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 alembic==1.14.1
 annotated-types==0.7.0
 anyio==4.8.0
-APScheduler==3.11.0
+apscheduler==3.11.0
 attrs==25.1.0
 blinker==1.9.0
 certifi==2025.1.31
@@ -14,11 +14,11 @@ cryptography==44.0.2
 distro==1.9.0
 durationpy==0.9
 filelock==3.17.0
-Flask==3.1.0
-Flask-APScheduler==1.13.1
-Flask-Cors==3.0.10
-Flask-Migrate==4.1.0
-Flask-SQLAlchemy==3.0.3
+flask==3.1.0
+flask-apscheduler==1.13.1
+flask-cors==3.0.10
+flask-migrate==4.1.0
+flask-sqlalchemy==3.0.3
 flatbuffers==25.2.10
 fsspec==2025.2.0
 greenlet==3.1.1
@@ -29,13 +29,13 @@ httpx==0.28.1
 idna==3.10
 iniconfig==2.0.0
 itsdangerous==2.2.0
-Jinja2==3.1.5
+jinja2==3.1.5
 jiter==0.8.2
 jwt==1.3.1
 llvmlite==0.44.0
 lxml==5.3.1
-Mako==1.3.9
-MarkupSafe==3.0.2
+mako==1.3.9
+markupsafe==3.0.2
 monotonic==1.6
 more-itertools==10.6.0
 mpmath==1.3.0
@@ -43,22 +43,22 @@ networkx==3.4.2
 numba==0.61.0
 numpy==2.1.3
 openai==1.64.0
-openai-whisper==20231117
 opentelemetry-util-http==0.51b0
 orjson==3.10.15
 overrides==7.7.0
 packaging==24.2
 pgvector==0.3.6
+pip==25.0.1
 pluggy==1.5.0
 protobuf==5.29.3
 psycopg2-binary==2.9.9
 pyasn1==0.6.1
 pycparser==2.22
 pydantic==2.10.6
-pydantic_core==2.27.2
-Pygments==2.19.1
-PyJWT==2.10.1
-PyPika==0.48.9
+pydantic-core==2.27.2
+pygments==2.19.1
+pyjwt==2.10.1
+pypika==0.48.9
 pyproject-hooks==1.2.0
 pyreadline3==3.5.4
 pytest==7.2.2
@@ -66,24 +66,26 @@ python-dateutil==2.9.0.post0
 python-docx==1.1.2
 python-dotenv==1.0.0
 pytz==2025.1
-PyYAML==6.0.2
+pyyaml==6.0.2
 regex==2024.11.6
 requests==2.32.3
+setuptools==75.8.2
 shellingham==1.5.4
 six==1.17.0
 sniffio==1.3.1
-SQLAlchemy==2.0.37
+sqlalchemy==2.0.37
 sympy==1.13.1
 tenacity==9.0.0
 tiktoken==0.9.0
-# torch==2.6.0
+torch==2.6.0
 tqdm==4.67.1
-typing_extensions==4.12.2
+typing-extensions==4.12.2
 tzdata==2025.1
 tzlocal==5.3
 urllib3==2.3.0
 websocket-client==1.8.0
 websockets==15.0
-Werkzeug==3.1.3
+werkzeug==3.1.3
+wheel==0.45.1
 wrapt==1.17.2
 zipp==3.21.0
