--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,6 @@
 name = "yapper"
 version = "0.1.0"
 requires-python = ">=3.11"
-
 dependencies = [
     "alembic==1.14.1",
     "annotated-types==0.7.0",
@@ -49,6 +48,7 @@ dependencies = [
     "numba==0.61.0",
     "numpy==2.1.3",
     "openai==1.64.0",
+    "openai-whisper>=20240930",
     "opentelemetry-util-http==0.51b0",
     "orjson==3.10.15",
     "overrides==7.7.0",
@@ -94,5 +94,5 @@ dependencies = [
     "werkzeug==3.1.3",
     "wheel==0.45.1",
     "wrapt==1.17.2",
-    "zipp==3.21.0"
+    "zipp==3.21.0",
 ]
