--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,7 @@ dependencies = [
     "distro==1.9.0",
     "durationpy==0.9",
     "filelock==3.17.0",
-    "flask==3.1.0",
+    "Flask>=2.3.0,<3.0",
     "flask-apscheduler==1.13.1",
     "flask-cors==3.0.10",
     "flask-migrate==4.1.0",
@@ -36,7 +36,6 @@ dependencies = [
     "itsdangerous==2.2.0",
     "jinja2==3.1.5",
     "jiter==0.8.2",
-    "jwt==1.3.1",
     "llvmlite==0.44.0",
     "lxml==5.3.1",
     "mako==1.3.9",
@@ -63,7 +62,7 @@ dependencies = [
     "pydantic==2.10.6",
     "pydantic-core==2.27.2",
     "pygments==2.19.1",
-    "pyjwt==2.10.1",
+    "pyjwt",
     "pypika==0.48.9",
     "pyproject-hooks==1.2.0",
     "pyreadline3==3.5.4",
@@ -74,7 +73,7 @@ dependencies = [
     "pytz==2025.1",
     "pyyaml==6.0.2",
     "regex==2024.11.6",
-    "requests==2.32.3",
+    "requests",
     "setuptools==75.8.2",
     "shellingham==1.5.4",
     "six==1.17.0",
@@ -91,7 +90,7 @@ dependencies = [
     "urllib3==2.3.0",
     "websocket-client==1.8.0",
     "websockets==15.0",
-    "werkzeug==3.1.3",
+    "Werkzeug>=2.3.0,<3.0",
     "wheel==0.45.1",
     "wrapt==1.17.2",
     "zipp==3.21.0",
