--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,14 @@
 {
   "version": 2,
+  "buildCommand": "cd frontend && npm install && npm run build",
+  "outputDirectory": "frontend/dist",
   "rewrites": [
     { "source": "/api/(.*)", "destination": "/api/$1" },
-    { "source": "/(.*)", "destination": "/" }
-  ]
+    { "source": "/(.*)", "destination": "/index.html" }
+  ],
+  "functions": {
+    "app.py": {
+      "runtime": "python3.11"
+    }
+  }
 }
