--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,9 +18,7 @@
   "scripts": {
     "dev": "vite --mode development",
     "build": "vite build",
-    "preview": "vite preview",
-    "test": "vitest",
-    "start-backend": "flask run --host=0.0.0.0 --port=5000"
+    "preview": "vite preview"
   },
   "browserslist": {
     "production": [
