--- a/pyproject.toml
+++ b/pyproject.toml
@@ -73,6 +73,7 @@ dependencies = [
     "pytz==2025.1",
     "pyyaml==6.0.2",
     "regex==2024.11.6",
+    "redis==5.0.1",
     "requests",
     "setuptools==75.8.2",
     "shellingham==1.5.4",
