--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,7 +30,7 @@ dependencies = [
     "gunicorn==23.0.0",
     "h11==0.14.0",
     "httpcore==1.0.7",
-    "httpx==0.28.1",
+    "httpx>=0.24,<0.26",
     "idna==3.10",
     "iniconfig==2.0.0",
     "itsdangerous==2.2.0",
@@ -79,17 +79,18 @@ dependencies = [
     "six==1.17.0",
     "sniffio==1.3.1",
     "sqlalchemy==2.0.37",
+    "supabase>=2.8.1",
     "sympy==1.13.1",
     "tenacity==9.0.0",
     "tiktoken==0.9.0",
-    "torch==2.6.0",
+    "torch==2.2.0",
     "tqdm==4.67.1",
-    "typing-extensions==4.12.2",
+    "typing-extensions>=4.13.2",
     "tzdata==2025.1",
     "tzlocal==5.3",
     "urllib3==2.3.0",
     "websocket-client==1.8.0",
-    "websockets==15.0",
+    "websockets>=11,<15",
     "Werkzeug>=2.3.0,<3.0",
     "wheel==0.45.1",
     "wrapt==1.17.2",
