--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,7 +30,7 @@ dependencies = [
     "gunicorn==23.0.0",
     "h11==0.14.0",
     "httpcore==1.0.7",
-    "httpx>=0.24,<0.26",
+    "httpx>=0.26.0",
     "idna==3.10",
     "iniconfig==2.0.0",
     "itsdangerous==2.2.0",
@@ -59,7 +59,7 @@ dependencies = [
     "psycopg2-binary==2.9.9",
     "pyasn1==0.6.1",
     "pycparser==2.22",
-    "pydantic==2.10.6",
+    "pydantic>=2.0.0",
     "pydantic-core==2.27.2",
     "pygments==2.19.1",
     "pyjwt",
@@ -70,6 +70,7 @@ dependencies = [
     "python-dateutil==2.9.0.post0",
     "python-docx==1.1.2",
     "python-dotenv==1.0.0",
+    "python-multipart>=0.0.6",
     "pytz==2025.1",
     "pyyaml==6.0.2",
     "regex==2024.11.6",
@@ -79,18 +80,18 @@ dependencies = [
     "six==1.17.0",
     "sniffio==1.3.1",
     "sqlalchemy==2.0.37",
-    "supabase>=2.8.1",
+    "supabase>=2.16.0",
     "sympy==1.13.1",
     "tenacity==9.0.0",
     "tiktoken==0.9.0",
     "torch==2.2.0",
     "tqdm==4.67.1",
-    "typing-extensions>=4.13.2",
+    "typing-extensions>=4.8.0",
     "tzdata==2025.1",
     "tzlocal==5.3",
     "urllib3==2.3.0",
     "websocket-client==1.8.0",
-    "websockets>=11,<15",
+    "websockets>=12.0",
     "Werkzeug>=2.3.0,<3.0",
     "wheel==0.45.1",
     "wrapt==1.17.2",
