--- a/pyproject.toml
+++ b/pyproject.toml
@@ -63,6 +63,7 @@ dependencies = [
     "pyproject-hooks==1.2.0",
     "pyreadline3==3.5.4",
     "pytest==7.2.2",
+    "pytest-cov>=7.0.0",
     "python-dateutil==2.9.0.post0",
     "python-docx==1.1.2",
     "python-dotenv==1.0.0",
